[workspace.lints.rust]
unsafe_code = "forbid"
# useused = "allow"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/easy/1_two_sum",
    "crates/easy/58_length_of_last_word",
    "crates/easy/66_plus_one",
    "crates/easy/67_add_binary",
    "crates/easy/69_sqrtx",
    "crates/easy/70_climbing_stairs",
    "crates/easy/83_remove_duplicates_from_sorted_list",
    "crates/easy/88_merge_sorted_array",
    "crates/easy/94_binary_tree_inorder_traversal",
]
