[workspace.lints.rust]
unsafe_code = "forbid"
# useused = "allow"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/easy/1_two_sum",
    "crates/easy/58_length_of_last_word",
    "crates/easy/66_plus_one",
    "crates/easy/67_add_binary",
    "crates/easy/69_sqrtx",
    "crates/easy/70_climbing_stairs",
    "crates/easy/83_remove_duplicates_from_sorted_list",
    "crates/easy/88_merge_sorted_array",
    "crates/easy/94_binary_tree_inorder_traversal",
    "crates/easy/100_same_tree",
    "crates/easy/101_symmetric_tree",
    "crates/easy/104_maximum_depth_of_binary_tree",
    "crates/easy/108_convert_sorted_array_to_binary_seach_tree",
    "crates/easy/110_balanced_binary_tree",
    "crates/easy/111_minimum_depth_of_binary",
    "crates/easy/112_path_sum",
    "crates/easy/118_pascal_triangle",
    "crates/easy/119_pascal_triangle_2",
    "crates/easy/121_best_time_to_buy_and_sell_stock",
]
